third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/move_field_invalid.exp

Diagnostics:
error: cannot move local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_field_invalid.move:13:9
   │
12 │         let f = &s.f;
   │                  ---
   │                  │
   │                  used by field borrow
   │                  previous local borrow
13 │         move s;
   │         ^^^^^^ moved here

error: cannot move local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_field_invalid.move:18:9
   │
17 │         let f = &mut s.f;
   │                      ---
   │                      │
   │                      used by mutable field borrow
   │                      previous mutable local borrow
18 │         move s;
   │         ^^^^^^ moved here

error: cannot move local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_field_invalid.move:23:9
   │
22 │         let f = id(&s.f);
   │                     ---
   │                     │
   │                     used by field borrow
   │                     previous local borrow
23 │         move s;
   │         ^^^^^^ moved here

error: cannot move local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_field_invalid.move:28:9
   │
27 │         let f = id_mut(&mut s.f);
   │                             ---
   │                             │
   │                             used by mutable field borrow
   │                             previous mutable local borrow
28 │         move s;
   │         ^^^^^^ moved here
